fixing alignment issue for header and nav

--- a/src/assets/styles/components/header.module.css
+++ b/src/assets/styles/components/header.module.css
@@ -4,27 +4,30 @@
 	align-items: center;
 	justify-content: center;
 	transition: ease-in-out 0.5s;
-	padding: 20vh 0;
+	padding-top: 200px;
+	height: 75vh;
+	border: 2px dotted red;
 }
+
 
 .headerRow {
 	display: flex;
 	align-items: center;
-	justify-content: flex-end;
+	justify-content: center;
+	margin: 0 auto;
 	font-family: var(--ff-display);
 	color: var(--white);
-	text-transform: uppercase;
-	font-size: 6.625rem;
-	font-weight: 600;
-	letter-spacing: -0.05rem;
+	font-size: 6.75rem;
+	border: 2px dotted white;
+	width: 60vw;
 }
-
+ 
 .headerLeft {
-	width: 100%;
+	width: 60vw;
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
-	justify-content: center;
+	justify-content: space-between;
 	text-align: center;
 	flex-wrap: wrap;
 }
@@ -88,6 +91,11 @@
 	background-color: white;
 	color: var(--pink);
 }
+
+img.image {
+	background-color: black;
+}
+
 
 @media (min-width: 921px) and (max-width: 1200px) {
 	.headerRow {
