--- a/src/assets/styles/components/navbar.module.css
+++ b/src/assets/styles/components/navbar.module.css
@@ -4,9 +4,9 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	background-color: #1a1a1a;
-	padding: 20px 40px;
+	background-color: var(--black);
 	position: fixed;
+	padding: 50px 100px 0;
 	top: 0;
 	left: 0;
 	right: 0;
